# wetalk

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
Sources/: global.cpp  httpmanager.cpp  mainwindow.cpp  (+1 more)
client/wetalk/: .gitignore  CMakeLists.txt  resources.qrc
client/wetalk/Sources/: ChatUserList.cpp  ChatView.cpp  ClickedBtn.cpp  ClickedLabel.cpp  CustomizeEdit.cpp  ListItemBase.cpp  TcpManager.cpp  TimerBtn.cpp  UserMgr.cpp  chatdialog.cpp  chatpage.cpp  chatuserwid.cpp  global.cpp  httpmanager.cpp  loadingdlg.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  registerdialog.cpp  resetdialog.cpp
client/wetalk/Sources/Forms/: chatdialog.ui  chatpage.ui  chatuserwid.ui  loadingdlg.ui  logindialog.ui  mainwindow.ui  registerdialog.ui  resetdialog.ui
client/wetalk/Sources/Headers/: ChatUserList.h  ChatView.h  ClickedBtn.h  ClickedLabel.h  CustomizeEdit.h  ListItemBase.h  TcpManager.h  TimerBtn.h  UserMgr.h  chatdialog.h  chatpage.h  chatuserwid.h  global.h  httpmanager.h  loadingdlg.h  logindialog.h  mainwindow.h  registerdialog.h  resetdialog.h  singleton.h
client/wetalk/style/: stylesheet.qss
server/ChatServer/: CMakeLists.txt
server/ChatServer/Sources/: AsioServicePool.cpp  CServer.cpp  CSession.cpp  ConfigManager.cpp  LogicSystem.cpp  MsgNode.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  UserMgr.cpp  main.cpp
server/ChatServer/Sources/Headers/: AsioServicePool.h  CServer.h  CSession.h  ConfigManager.h  LogicSystem.h  MsgNode.h  RedisMgr.h  StatusGrpcClient.h  UserMgr.h  const.h  data.h
server/GateServer/: CMakeLists.txt
server/GateServer/Sources/: AsioIOServicePool.cpp  CServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlManager.cpp  StatusGrpcClient.cpp  VerityGrpcClient.cpp  main.cpp
server/GateServer/Sources/Headers/: AsioIOServicePool.h  CServer.h  ConfigManager.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlManager.h  RedisManager.h  Singleton.h  StatusGrpcClient.h  VerityGrpcClient.h  const.h
server/GateServer/config/: config.ini
server/GateServer/lib/boostlib/: libboost_container-vc1941-mt-1_86.lib  libboost_container-vc1941-mt-gd-1_86.lib  libboost_context-vc1941-mt-1_86.lib  libboost_context-vc1941-mt-gd-1_86.lib  libboost_contract-vc1941-mt-1_86.lib  libboost_contract-vc1941-mt-gd-1_86.lib  libboost_coroutine-vc1941-mt-1_86.lib  libboost_coroutine-vc1941-mt-gd-1_86.lib  libboost_date_time-vc1941-mt-1_86.lib  libboost_date_time-vc1941-mt-gd-1_86.lib  libboost_exception-vc1941-mt-1_86.lib  libboost_exception-vc1941-mt-gd-1_86.lib  libboost_graph-vc1941-mt-1_86.lib  libboost_iostreams-vc1941-mt-1_86.lib  libboost_iostreams-vc1941-mt-gd-1_86.lib  libboost_numpy39-vc1941-mt-1_86.lib  libboost_numpy39-vc1941-mt-gd-1_86.lib  libboost_prg_exec_monitor-vc1941-mt-1_86.lib  libboost_prg_exec_monitor-vc1941-mt-gd-1_86.lib  libboost_program_options-vc1941-mt-1_86.lib  libboost_python39-vc1941-mt-1_86.lib  libboost_regex-vc1941-mt-1_86.lib  libboost_serialization-vc1941-mt-1_86.lib  libboost_system-vc1941-mt-1_86.lib  libboost_system-vc1941-mt-gd-1_86.lib  libboost_timer-vc1941-mt-1_86.lib  libboost_timer-vc1941-mt-gd-1_86.lib
server/GateServer/lib/boostlib/cmake/boost_container-1.86.0/: boost_container-config.cmake  libboost_container-variant-vc1941-mt-1_86-static.cmake  libboost_container-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_context-1.86.0/: boost_context-config.cmake  libboost_context-variant-vc1941-mt-1_86-static.cmake  libboost_context-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_contract-1.86.0/: boost_contract-config.cmake  libboost_contract-variant-vc1941-mt-1_86-static.cmake  libboost_contract-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_coroutine-1.86.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-vc1941-mt-1_86-static.cmake  libboost_coroutine-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_date_time-1.86.0/: boost_date_time-config.cmake  libboost_date_time-variant-vc1941-mt-1_86-static.cmake  libboost_date_time-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_exception-1.86.0/: boost_exception-config.cmake
server/GateServer/lib/boostlib/cmake/boost_graph-1.86.0/: boost_graph-config.cmake  libboost_graph-variant-vc1941-mt-1_86-static.cmake  libboost_graph-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_graph_parallel-1.86.0/: boost_graph_parallel-config.cmake
server/GateServer/lib/boostlib/cmake/boost_headers-1.86.0/: boost_headers-config.cmake
server/GateServer/lib/boostlib/cmake/boost_iostreams-1.86.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-vc1941-mt-1_86-static.cmake  libboost_iostreams-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_mpi-1.86.0/: boost_mpi-config.cmake
server/GateServer/lib/boostlib/cmake/boost_numpy-1.86.0/: boost_numpy-config.cmake  libboost_numpy-variant-vc1941-mt-1_86-static-py3.9.cmake  libboost_numpy-variant-vc1941-mt-gd-1_86-static-py3.9.cmake
server/GateServer/lib/boostlib/cmake/boost_prg_exec_monitor-1.86.0/: boost_prg_exec_monitor-config.cmake  libboost_prg_exec_monitor-variant-vc1941-mt-1_86-static.cmake  libboost_prg_exec_monitor-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_program_options-1.86.0/: boost_program_options-config.cmake  libboost_program_options-variant-vc1941-mt-1_86-static.cmake  libboost_program_options-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/boostlib/cmake/boost_python-1.86.0/: boost_python-config.cmake  libboost_python-variant-vc1941-mt-1_86-static-py3.9.cmake  libboost_python-variant-vc1941-mt-gd-1_86-static-py3.9.cmake
server/GateServer/lib/boostlib/cmake/boost_regex-1.86.0/: boost_regex-config.cmake  libboost_regex-variant-vc1941-mt-1_86-static.cmake  libboost_regex-variant-vc1941-mt-gd-1_86-static.cmake
server/GateServer/lib/jsonlib/pkgconfig/: jsoncpp.pc
server/GateServer/proto/: message.pb.cc
(+48 files in other folders)
